@@ -65,7 +65,6 @@ case "$KVER" in
     ;;
 esac
 
-test -r "$MODPATH/oracleasm.o" || exit 5
 
 
 
@@ -100,7 +99,7 @@ start()
     dev_create "${DEVASM}"
     if_fail "$?" "Unable to create ${DEVASM}"
 
-    if [ "$ORACLEASM_ENABLED" != "true" ]
+    if [ "$ORACLEASM_ENABLED" != "true" -o ! -r "${OBJPATH}/${MODNAME}.o" ]
     then
         return
     fi
